2013-07-29  Christian Perrier  <christian@perrier.eu.org>

        * man/useradd.xml: use "--home-dir" instead of "--home"
	  Fix translations too.
	  Thanks to Ville Skyttä
	  Closes: alioth#313880

2013-07-29  Ville Skyttä  <scop-guest@alioth.debian.org>

        * man/ja/man8/groupmod.8: Syntax fix
	  Closes: alioth#313785

2013-07-29  Brad Hubbard  <badone-guest@alioth.debian.org>

        * lib/groupio.c: add newline char when two lines
          are concatenated
	  Closes: alioth#313942
	* lib/groupio.c: fix uninitialised memory in
          merge_group_entries causes segfault in useradd by changing
	  a call to malloc to a call to calloc
	  Closes: alioth:#313940

2013-07-28  Guido Trentalancia  <guido@trentalancia.com>

        * etc/login.defs: fix typographic errors and use a better format
	  Closes: Debian#685415

2013-07-28  Simon Brandmair  <sbrandmair@gmx.net>

        * man/po/de.po: translation completed : 1203 translated messages
	  Closes: Debian#679152

2013-07-28  mancha  <mancha1@hush.com>

        * lib/encrypt.c: crypt() in glibc/eglibc 2.17 now fails if passed
          a salt that violates specs. On Linux, crypt() also fails with
          DES/MD5 salts in FIPS140 mode. Rather than exit() on NULL returns
          we send them back to the caller for appropriate handling.
          Closes: alioth#314234
        * lib/pwauth.c: Handle NULL return from crypt().
        * libmisc/valid.c: Likewise.
        * src/chgpasswd.c: Likewise.
        * src/chpasswd.c: Likewise.
        * src/gpasswd.c: Likewise.
        * src/newgrp.c: Likewise.
        * src/newusers.c: Likewise.
        * src/passwd.c: Likewise.

2013-07-28  Christian Perrier  <christian@perrier.eu.org>

	* configure.in: Prepare for next point release 4.2.
	* if using the static char* for pw_dir, strdup it so
	  pw_free() can be used. (Closes: Debian#691459, alioth#313957) 
	* Kill the child process group, rather than just the 
	  immediate child; this is needed now that su no